# Newtonian_Method

./: ElastoPlastic_tutorial.ipynb  Newton_tutorial.ipynb  Newtonian_Method.py  README.md  assignment_1_genAIuse.txt  pyproject.toml  test_Newtonian_Method.py  testsNM.yml
.github/workflows/: tests.yml
ElastoPlastic/: Elasto_Plastic.py
NewtonMethod/: Newton_Method.py
Scripts/: Newton_and_ElastoPlastic.py
tests/: test_Newton_Method.py  test_script.py
