[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tlyle_Part1"
version = "0.0.0"
authors = [
  { name="Tucker Lyle" },
]
description = "Part1 workflow"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib==3.10.0",
    "numpy==1.26.4",
    "pytest==7.1.2",
    "pytest-cov==3.0.0",
    "scipy==1.12.0",
    "sympy==1.10.1"
]


[project.urls]
"Homepage" = "https://github.com/tuckluck/Part1.git"
